# poetry-reasoning

./: LICENSE  README.md  pyproject.toml
service-a/: README.md  pyproject.toml
service-b/: pyproject.toml
service-c/: README.md  pyproject.toml  requirements_freeze.txt  requirements_pc.txt
