[tool.poetry]
name = "poetry-reasoning"
version = "0.1.0"
description = "Root"
authors = ["Martynas Subonis <martynas.subonis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.0"

[tool.poetry.group.dev.dependencies]
black = "23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
