[tool.poetry]
name = "service-a"
version = "0.1.0"
description = ""
authors = ["Martynas Subonis <martynas.subonis@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
flask = "2.2.3"
pandas = "2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.1"
mypy = "1.5.1"
pandas-stubs = "2.0.3.230814"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
