[tool.poetry]
name = "service-b"
version = "0.1.0"
description = ""
authors = ["Martynas Subonis <martynas.subonis@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "0.103.1"
pandas = "1.5.3"
pyarrow = "13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.1"
mypy = "1.5.1"
pandas-stubs = "1.5.3.230321"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
